# granola-clone-v1

./: .env.example  .gitignore  README.md  drizzle.config.ts  electron.vite.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json
resources/: README.md  entitlements.mac.plist
src/main/: audio-capture.ts  index.ts  ipc-handlers.ts  menu.ts  tray.ts
src/main/db/: index.ts  queries.ts  schema.ts
src/main/llm/: client.ts
src/main/transcription/: whisper-local.ts
src/preload/: index.ts
src/renderer/: App.tsx  index.html  main.tsx
src/renderer/components/: Sidebar.tsx
src/renderer/components/meeting/: MeetingChat.tsx  NoteEditor.tsx  TemplateSelector.tsx  TranscriptPanel.tsx
src/renderer/hooks/: use-audio-capture.ts
src/renderer/lib/: utils.ts
src/renderer/pages/: Evaluations.tsx  Home.tsx  Meeting.tsx  Settings.tsx
src/renderer/stores/: meeting-store.ts
src/renderer/styles/: globals.css
src/shared/: types.ts
src/shared/config/: models.ts  templates.ts
whisper-server/: .env.example  Makefile  README.md  pyproject.toml  requirements.txt  server.py
